--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "back-end-wifeo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Quentin",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
